# server/models/index.js
@@ -121,6 +121,10 @@ const userSchema = new mongoose.Schema({
   resetPasswordExpires: {
     type: Date,
     default: null
+  },
+  lastLoginAt: {
+    type: Date,
+    default: null
   }
 }, { timestamps: true });
 
